--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,17 @@ local: `/data` ou `local/files`
 >
 - [Clique aqui](https://docs.google.com/spreadsheets/d/1oyA3Pnf382uwHE1Ovg4WMGA4hdzBTiju9M5uiRguW-0)
 
+## Combinações
+
+O gráfico a seguir mostra as combinações possíveis de interações verificadas no pedido:
+
+```{r echo=FALSE, fig.height=8, fig.width=10, message=FALSE, warning=FALSE}
+library(tidyverse)
+load(here::here("data/fluxo-e-contagem-de-interacoes.RData"))
+plot_combinacoes_de_fluxo_interacoes()
+```
+
+
 ## Termos chave utilizados
 
 * Termo (`<regex>`)
