--- a/README.Rmd
+++ b/README.Rmd
@@ -1,20 +1,22 @@
 ---
 title: "Chatbot - AeP"
 output: github_document
+always_allow_html: true
 ---
 
 ## Código
 * local: `/src`
 
 > 
-- [`0-fetch-mysql-to-r.R`](src/0-fetch-mysql-to-r.R): *Exporta a base de dados do MySQL, armazenando em um arquivo `tblai.RData`*
-- [`1-filtra-pedidos-com-recursos.R`](src/1-filtra-pedidos-com-recursos.R): *Extrai da base pedidos com recurso em 1ª instância, entrega nova base chamada `filtra-pedidos-com-recursos.RData`*
-- [`2-fluxo-e-contagem-das-interacoes.R`](src/2-fluxo-e-contagem-das-interacoes.R): *Faz o mapeamento dos pedidos que tiveram ou não resposta, recurso, resposta do recurso até a 4ª instãncia, entrega o mapeamento na base `fluxo-e-contagem-das-interacoes.RData`*
-- [`3-pedidos-respostas-recursos.R`](src/3-pedidos-respostas-recursos.R): *Realiza o enfileiramento das interações, fazendo que o fluxo completo do pedido possa ser lido horizontalmente em uma tabela (isso permite a leitura humana e facilita o processamento por máquinha, seguindo o mesmo padrão das bases entregues para estudo NLP). O resultado é entregue em uma tabela chamada `pedidos-respostas-recursos.rds`*
-- [`4-busca-termos.R`](src/4-busca-termos.R): *Realiza busca por termos-chave e exporta resultados para uma planilha no Google Sheet*
+- [`0-fetch-mysql-to-r.R`](src/0-fetch-mysql-to-r.R): *Exporta a base de dados do MySQL*
+- [`1-filtra-pedidos-com-recursos.R`](src/1-filtra-pedidos-com-recursos.R): *Extrai da base pedidos com recurso em 1ª instância*
+- [`2-fluxo-e-contagem-das-interacoes.R`](src/2-fluxo-e-contagem-das-interacoes.R): *Faz o mapeamento dos pedidos que tiveram ou não resposta, recurso, resposta do recurso até a 4ª instãncia*
+- [`3-pedidos-respostas-recursos.R`](src/3-pedidos-respostas-recursos.R): *Realiza o enfileiramento das interações, fazendo com que o fluxo completo do pedido possa ser lido horizontalmente em uma tabela*
+- [`4-lista-de-regex.R`](src/5-lista-de-regex.R): *Lista de expressões regulares*
+- [`5-busca-termos.R`](src/4-busca-termos.R): *Realiza busca por termos-chave e exporta resultados para uma planilha no Google Sheet*
 
 ## Bases de dados produzidas
-local: `/data` ou `local/files`
+* local: `/data` ou `local/files`
 
 >
 - [`tblai.RData`](https://drive.google.com/file/d/1MZcRj2hZGmdToccZoMOiRH9eR78AU7Gb/view?usp=sharing): bases extraídas do MySQL (tblai)
@@ -36,22 +38,48 @@ load(here::here("data/fluxo-e-contagem-de-interacoes.RData"))
 plot_combinacoes_de_fluxo_interacoes()
 ```
 
-
 ## Termos chave utilizados
 
-* Termo (`<regex>`)
-
-> 
-* Pedido desarrazoado ou desproporcional (`desarrazoado|desproporciona`)
-* Fishing expedition (`fishing`)
-* Segurança Nacional (`segurança [nacional|do estado]`)
-* Sigilo (`sigilo`)
-* Decisão em curso (`processo decisorio em curso|documento preparatorio`)
-* Trabalho adicional (`trabalho[s]? adiciona`)
-* Pedido Genérico (`generico`)
-* LGPD (`lei geral de proteção de dados|lei de protecao de dados pessoais|13\\.?709|13\\.?853|lgpd`)
-
+```{r echo=FALSE}
+source(here::here("src/4-lista-de-regex.R"), encoding = "utf-8")
+tibble::tribble(
+  ~ `Termo (grupo)`, ~ `Variações`, ~ `Expressão regular`,
+  "Trabalho adicional", "trabalho adicional, tratamento adicional", str_glue("<code>{rgx_trabalho_adic}</code>"),
+  "Sigilo", "sigilo", "<code>sigilo</code>",
+  "Pedido genérico", "genérico", "<code>generico</code>",
+  "Desarrazoado", "desarrazoado, desproporcional", "<code>desarrazoado|desproporcional</code>",
+  "Dados pessoais", "dados pessoais", "<code>dados? pessoa(l|is)</code>",
+  "Órgão incompetente", "[órgão] não tem competência, [assunto] não é de competência [do órgão]", "<code>nao( sao de| e de| sao| e| tem) competencia</code>",
+  "Recurso por resposta incompleta", "resposta incompleta, parcialmente respondida(o), parcialmente atendida(o), faltam incormações, faltou informar", str_glue("<code>{rgx_resposta_incompleta}</code>"),
+  "Recurso por anexo corrompido", "anexo ilegível, anexo comrrompido, anexo faltante, faltou anexar, sem (arquivo) anexo, não é possível acessar anexo", str_glue("<code>{regex_anexo_corrompido}</code>"),
+  "Processo decisório em curso", "processo decisório em curso, documentos preparatórios", "<code>processo decisorio em curso|documentos? preparatorio</code>",
+  "Segurança nacional", "segurança nacional, segurança de/do estado", "<code>seguranca nacional|seguranca do estado</code>",
+  "Dado/informação inexistente", "informação/dado/documento inexistente", str_glue("<code>{rgx_inexistentes}</code>")
+) %>% kableExtra::kbl(escape = F, format = "pipe")
+```
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 load(here::here("data/busca-termos.RData"))
 plot_resultados_detecao_termos()
+```
+
+## Recursos
+
+### Detecção de termos em recursos
+
+```{r echo=FALSE}
+tibble::tribble(
+  ~ `Termo (grupo)`, ~ `Expressão regular`,
+  "Não consta", "<code>nao consta</code>",
+  "Está faltando", "<code>estao? faltando|faltaram (as|os)?</code>",
+  "Não contempla", "<code>nao contempla</code>",
+  "Insatisfatória", "<code>insatisfatori(a|o)|nao satisfaz</code>",
+  "Não corresponde", "<code>nao corresponde</code>",
+  "Não atende", "<code>nao atende</code>",
+  "Incompleta", "<code>incomplet(a|o)|nao esta completo</code>",
+  "Insuficiente", "<code>insuficiente</code>"
+) %>% kableExtra::kbl(escape = F, format = "pipe")
+```
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+load(here::here("data/busca-termos-recursos.RData"))
+plot_resultados_detecao_termos_recursos()
 ```
